widget: начал прикручивать настройки к виджету

--- a/Forecast/app/src/main/res/values/strings.xml
+++ b/Forecast/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="infoTV">Add a city \nto display the weather forecast.</string>
     <string name="incorrect_city_error">Некорректное название города</string>
 
+    <string name="ok">Ok</string>
+
 </resources>
